--- a/package.json
+++ b/package.json
@@ -1,90 +1,81 @@
 {
-  "name": "standard",
-  "version": "0.1.0",
-  "private": true,
+  "name": "aletta",
+  "version": "1.0.0",
+  "main": "index.js",
+  "license": "MIT",
+  "homepage": "https://uniquename.github.io/my-aletta",
   "dependencies": {
-    "autoprefixer": "7.1.2",
-    "babel-core": "6.25.0",
-    "babel-eslint": "7.2.3",
-    "babel-jest": "20.0.3",
-    "babel-loader": "7.1.1",
-    "babel-preset-react-app": "^3.0.3",
-    "babel-runtime": "6.26.0",
-    "case-sensitive-paths-webpack-plugin": "2.1.1",
-    "chalk": "1.1.3",
-    "css-loader": "0.28.4",
-    "dotenv": "4.0.0",
-    "eslint": "4.4.1",
-    "eslint-config-react-app": "^2.0.1",
-    "eslint-loader": "1.9.0",
-    "eslint-plugin-flowtype": "2.35.0",
-    "eslint-plugin-import": "2.7.0",
-    "eslint-plugin-jsx-a11y": "5.1.1",
-    "eslint-plugin-react": "7.1.0",
-    "extract-text-webpack-plugin": "3.0.0",
-    "file-loader": "0.11.2",
-    "fs-extra": "3.0.1",
-    "html-webpack-plugin": "2.29.0",
-    "jest": "20.0.4",
-    "object-assign": "4.1.1",
-    "postcss-flexbugs-fixes": "3.2.0",
-    "postcss-loader": "2.0.6",
-    "promise": "8.0.1",
+    "babel-plugin-lodash": "^3.2.11",
+    "cross-env": "^5.1.0",
+    "express": "^4.16.2",
+    "favicons-webpack-plugin": "^0.0.7",
+    "isomorphic-fetch": "^2.2.1",
+    "material-ui": "^1.0.0-beta.18",
+    "material-ui-icons": "^1.0.0-beta.17",
+    "path": "^0.12.7",
     "react": "^16.0.0",
-    "react-dev-utils": "^4.1.0",
     "react-dom": "^16.0.0",
-    "style-loader": "0.18.2",
-    "sw-precache-webpack-plugin": "0.11.4",
-    "url-loader": "0.5.9",
-    "webpack": "3.5.1",
-    "webpack-dev-server": "2.8.2",
-    "webpack-manifest-plugin": "1.2.1",
-    "whatwg-fetch": "2.0.3"
+    "react-ga": "^2.3.5",
+    "react-redux": "^5.0.6",
+    "react-router-dom": "^4.2.2",
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0",
+    "spdy": "^3.4.7",
+    "typeface-roboto": "^0.0.41",
+    "webpack": "^3.8.1",
+    "webpack-dev-server": "^2.9.2",
+    "workbox-sw": "^2.1.0",
+    "workbox-webpack-plugin": "^2.1.0"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
+    "babel-eslint": "^8.0.1",
+    "babel-loader": "^7.1.2",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-es2017": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "clean-webpack-plugin": "^0.1.17",
+    "copy-webpack-plugin": "^4.1.1",
+    "eslint": "^4.9.0",
+    "eslint-config-airbnb": "^15.0.1",
+    "eslint-config-prettier": "^2.6.0",
+    "eslint-loader": "^1.9.0",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-jsx-a11y": "^5.1.1",
+    "eslint-plugin-prettier": "^2.3.1",
+    "eslint-plugin-react": "^7.4.0",
+    "gh-pages": "^1.0.0",
+    "gulp": "^3.9.1",
+    "gulp-if": "^2.0.2",
+    "gulp-prompt": "^0.4.1",
+    "gulp-rsync": "^0.0.8",
+    "html-webpack-plugin": "^2.30.1",
+    "minimist": "^1.2.0",
+    "preload-webpack-plugin": "^2.0.0",
+    "prettier": "^1.7.4",
+    "ssh-webpack-plugin": "^0.1.7",
+    "standard-loader": "^6.0.1",
+    "uglifyjs-webpack-plugin": "^1.0.0-beta.3",
+    "webpack-bundle-analyzer": "^2.9.0",
+    "webpack-merge": "^4.1.0",
+    "webpack-pwa-manifest": "^3.3.2",
+    "workbox-background-sync": "^2.0.3",
+    "workbox-google-analytics": "^2.1.0"
   },
   "scripts": {
-    "start": "node scripts/start.js",
-    "build": "node scripts/build.js",
-    "test": "node scripts/test.js --env=jsdom"
-  },
-  "jest": {
-    "collectCoverageFrom": [
-      "src/**/*.{js,jsx}"
-    ],
-    "setupFiles": [
-      "<rootDir>/config/polyfills.js"
-    ],
-    "testMatch": [
-      "<rootDir>/src/**/__tests__/**/*.js?(x)",
-      "<rootDir>/src/**/?(*.)(spec|test).js?(x)"
-    ],
-    "testEnvironment": "node",
-    "testURL": "http://localhost",
-    "transform": {
-      "^.+\\.(js|jsx)$": "<rootDir>/node_modules/babel-jest",
-      "^.+\\.css$": "<rootDir>/config/jest/cssTransform.js",
-      "^(?!.*\\.(js|jsx|css|json)$)": "<rootDir>/config/jest/fileTransform.js"
-    },
-    "transformIgnorePatterns": [
-      "[/\\\\]node_modules[/\\\\].+\\.(js|jsx)$"
-    ],
-    "moduleNameMapper": {
-      "^react-native$": "react-native-web"
-    },
-    "moduleFileExtensions": [
-      "web.js",
-      "js",
-      "json",
-      "web.jsx",
-      "jsx",
-      "node"
-    ]
-  },
-  "babel": {
-    "presets": [
-      "react-app"
-    ]
-  },
-  "eslintConfig": {
-    "extends": "react-app"
+    "start": "yarn start-dev",
+    "start-dev": "webpack-dev-server --config=webpack/webpack.dev",
+    "start-server": "node build/server/server.js",
+    "serve": "yarn build-server && yarn start-server",
+    "build": "yarn build-prod",
+    "build-prod": "webpack --config=webpack/webpack.prod",
+    "build-server": "webpack --config=webpack/webpack.server",
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d build",
+    "gh": "gh-pages -d build",
+    "stats": "webpack --config=webpack/webpack.prod --profile --json > stats.json",
+    "lint": "eslint . --ext .js --ext .jsx --ignore-path .gitignore --cache"
   }
 }
