--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "cross-env": "^5.1.0",
     "express": "^4.16.2",
     "favicons-webpack-plugin": "^0.0.7",
+    "firebase": "^4.6.0",
     "isomorphic-fetch": "^2.2.1",
     "material-ui": "^1.0.0-beta.18",
     "material-ui-icons": "^1.0.0-beta.17",
@@ -68,7 +69,7 @@
     "start": "yarn start-dev",
     "start-dev": "webpack-dev-server --config=webpack/webpack.dev",
     "start-server": "node build/server/server.js",
-    "serve": "yarn build-server && yarn start-server",
+    "serve": "yarn start-server",
     "build": "yarn build-prod",
     "build-prod": "webpack --config=webpack/webpack.prod",
     "build-server": "webpack --config=webpack/webpack.server",
