--- a/package.json
+++ b/package.json
@@ -3,12 +3,11 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
-  "homepage": "https://uniquename.github.io/my-aletta",
+  "homepage": "https://pwa.12deg.de",
   "dependencies": {
     "babel-plugin-lodash": "^3.2.11",
     "cross-env": "^5.1.0",
     "express": "^4.16.2",
-    "favicons-webpack-plugin": "^0.0.7",
     "firebase": "^4.6.0",
     "isomorphic-fetch": "^2.2.1",
     "material-ui": "^1.0.0-beta.18",
@@ -26,7 +25,9 @@
     "webpack": "^3.8.1",
     "webpack-dev-server": "^2.9.2",
     "workbox-sw": "^2.1.0",
-    "workbox-webpack-plugin": "^2.1.0"
+    "workbox-webpack-plugin": "^2.1.0",
+    "workbox-background-sync": "^2.0.3",
+    "workbox-google-analytics": "^2.1.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
@@ -47,6 +48,7 @@
     "eslint-plugin-jsx-a11y": "^5.1.1",
     "eslint-plugin-prettier": "^2.3.1",
     "eslint-plugin-react": "^7.4.0",
+    "favicons-webpack-plugin": "^0.0.7",
     "gh-pages": "^1.0.0",
     "gulp": "^3.9.1",
     "gulp-if": "^2.0.2",
@@ -61,9 +63,7 @@
     "uglifyjs-webpack-plugin": "^1.0.0-beta.3",
     "webpack-bundle-analyzer": "^2.9.0",
     "webpack-merge": "^4.1.0",
-    "webpack-pwa-manifest": "^3.3.2",
-    "workbox-background-sync": "^2.0.3",
-    "workbox-google-analytics": "^2.1.0"
+    "webpack-pwa-manifest": "^3.3.2"
   },
   "scripts": {
     "start": "yarn start-dev",
