--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "isomorphic-fetch": "^2.2.1",
     "material-ui": "^1.0.0-beta.18",
     "material-ui-icons": "^1.0.0-beta.17",
+    "morgan": "^1.9.0",
     "path": "^0.12.7",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
@@ -24,10 +25,10 @@
     "typeface-roboto": "^0.0.41",
     "webpack": "^3.8.1",
     "webpack-dev-server": "^2.9.2",
-    "workbox-sw": "^2.1.0",
-    "workbox-webpack-plugin": "^2.1.0",
     "workbox-background-sync": "^2.0.3",
-    "workbox-google-analytics": "^2.1.0"
+    "workbox-google-analytics": "^2.1.0",
+    "workbox-sw": "^2.1.0",
+    "workbox-webpack-plugin": "^2.1.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
