--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "homepage": "https://pwa.12deg.de",
   "dependencies": {
     "babel-plugin-lodash": "^3.2.11",
+    "css-loader": "^0.28.7",
     "express": "^4.16.2",
     "firebase": "^4.6.0",
     "isomorphic-fetch": "^2.2.1",
@@ -22,6 +23,7 @@
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
     "spdy": "^3.4.7",
+    "style-loader": "^0.19.0",
     "typeface-roboto": "^0.0.41",
     "webpack": "^3.8.1",
     "webpack-dev-server": "^2.9.2",
