--- a/package.json
+++ b/package.json
@@ -58,7 +58,9 @@
     "gulp-prompt": "^0.4.1",
     "gulp-rsync": "^0.0.8",
     "html-webpack-plugin": "^2.30.1",
+    "isomorphic-style-loader": "^4.0.0",
     "minimist": "^1.2.0",
+    "postcss-loader": "^2.0.8",
     "preload-webpack-plugin": "^2.0.0",
     "prettier": "^1.7.4",
     "ssh-webpack-plugin": "^0.1.7",
