--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
   "homepage": "https://pwa.12deg.de",
   "dependencies": {
     "babel-plugin-lodash": "^3.2.11",
-    "css-loader": "^0.28.7",
     "express": "^4.16.2",
     "firebase": "^4.6.0",
     "isomorphic-fetch": "^2.2.1",
@@ -14,6 +13,7 @@
     "material-ui-icons": "^1.0.0-beta.17",
     "morgan": "^1.9.0",
     "path": "^0.12.7",
+    "prop-types": "^15.6.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-ga": "^2.3.5",
@@ -23,7 +23,6 @@
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
     "spdy": "^3.4.7",
-    "style-loader": "^0.19.0",
     "typeface-roboto": "^0.0.41",
     "webpack": "^3.8.1",
     "webpack-dev-server": "^2.9.2",
@@ -58,9 +57,7 @@
     "gulp-prompt": "^0.4.1",
     "gulp-rsync": "^0.0.8",
     "html-webpack-plugin": "^2.30.1",
-    "isomorphic-style-loader": "^4.0.0",
     "minimist": "^1.2.0",
-    "postcss-loader": "^2.0.8",
     "preload-webpack-plugin": "^2.0.0",
     "prettier": "^1.7.4",
     "ssh-webpack-plugin": "^0.1.7",
