--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "start-dev": "webpack-dev-server --config=webpack/webpack.dev",
     "serve": "node build/server/server.js",
     "build": "webpack --config=webpack/webpack.prod",
+    "build-dev": "webpack --config=webpack/webpack.dev",
     "build-live": "webpack --config=webpack/webpack.server.prod",
     "build-local": "webpack --config=webpack/webpack.server.local",
     "stats": "webpack --config=webpack/webpack.prod --profile --json > stats.json",
