--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "babel-plugin-lodash": "^3.2.11",
     "express": "^4.16.2",
     "firebase": "^4.6.0",
+    "html-minifier": "^3.5.6",
     "isomorphic-fetch": "^2.2.1",
     "material-ui": "^1.0.0-beta.18",
     "material-ui-icons": "^1.0.0-beta.17",
