--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "minimist": "^1.2.0",
     "preload-webpack-plugin": "^2.0.0",
     "prettier": "^1.7.4",
+    "script-ext-html-webpack-plugin": "^1.8.8",
     "ssh-webpack-plugin": "^0.1.7",
     "standard-loader": "^6.0.1",
     "uglifyjs-webpack-plugin": "^1.0.0-beta.3",
